--- a/client/index.html
+++ b/client/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="ByteStash - Code Snippet Manager"
+      content="CodeHub - Code Snippet Manager"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>ByteStash</title>
+    <title>CodeHub</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
